NEW: Added option to log dates as UTC or local

--- a/gui/SettingsPanel.resx
+++ b/gui/SettingsPanel.resx
@@ -147,4 +147,7 @@
   <metadata name="intervalLabel.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </metadata>
+  <metadata name="loggingGroupBox.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
+  </metadata>
 </root>
